# avor-smart-attribute-manager

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
data/attribute_catalog/: 20260706_Attribute.xlsx
docs/: architecture.md  digikey_provider.md  mouser_e2e_report.md  nexar_provider.md
scripts/: generate_attribute_rules.py
src/avor_smart_attribute_manager/: __init__.py  __main__.py  app.py  cli.py
src/avor_smart_attribute_manager/ai/: __init__.py  suggestions.py
src/avor_smart_attribute_manager/analysis/: __init__.py  attribute_analyzer.py  attribute_mapping.py  online_analyzer.py  value_comparison.py
src/avor_smart_attribute_manager/config/: __init__.py  attribute_rules.json  settings.py
src/avor_smart_attribute_manager/config/provider_mappings/: __init__.py  nexar_attribute_mapping.json
src/avor_smart_attribute_manager/datasources/: __init__.py  base.py  cache.py  digikey.py  mouser.py  nexar.py  normalization.py  provider.py
src/avor_smart_attribute_manager/excel/: __init__.py  columns.py  exporter.py  importer.py  rule_catalog.py
src/avor_smart_attribute_manager/gui/: __init__.py  main_window.py
src/avor_smart_attribute_manager/gui/views/: __init__.py
src/avor_smart_attribute_manager/manufacturers/: __init__.py  manufacturer_data.py
src/avor_smart_attribute_manager/models/: __init__.py  article.py  online.py  validation.py
src/avor_smart_attribute_manager/rules/: __init__.py  attribute_rules.py  rule_engine.py
tests/: __init__.py  test_analysis.py  test_attribute_mapping.py  test_attribute_rules.py  test_cli.py  test_cli_online.py  test_columns.py  test_digikey_provider.py  test_digikey_response_shape.py  test_exporter.py  test_exporter_online.py  test_importer.py  test_mouser_provider.py  test_mouser_response_shape.py  test_multi_provider_analyzer.py  test_nexar_mapping.py  test_nexar_provider.py  test_normalization.py  test_online_analyzer.py  test_package_structure.py  test_rule_catalog.py  test_rule_engine.py  test_search_cache.py  test_settings.py  test_value_comparison.py
